create and save problem sets