@@ -156,6 +156,7 @@
                 <artifactId>kotlin-allopen</artifactId>
                 <version>${kotlin.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.jetbrains.kotlinx</groupId>
                 <artifactId>kotlinx-coroutines-core</artifactId>
@@ -277,6 +278,17 @@
                 <groupId>org.controlsfx</groupId>
                 <artifactId>controlsfx</artifactId>
                 <version>11.0.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.uchuhimo</groupId>
+                <artifactId>konf-core</artifactId>
+                <version>0.22.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.uchuhimo</groupId>
+                <artifactId>konf-yaml</artifactId>
+                <version>0.22.1</version>
             </dependency>
 
             <dependency>
@@ -632,6 +644,8 @@
                                 <options>
                                     <option>--add-opens</option>
                                     <option>javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                                    <option>--add-opens</option>
+                                    <option>javafx.graphics/javafx.scene=ALL-UNNAMED</option>
                                     <option>--add-opens</option>
                                     <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                                     <option>-Dconfig=${project.basedir}/../../config</option>
